// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`detailed billing working properly 1`] = `
<div
  className="
        flex-100 layout-row layout-wrap offer_result flex-lg-80 offset-lg-20
        wrapper 
      "
>
  <div
    className="flex-100 layout-row layout-align-start-center container"
  >
    <div
      className="flex-10 layout-row layout-align-center-center mot_icon"
    >
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex-55 layout-row layout-align-start-center origin_destination"
    >
      <div
        className="layout-column layout-align-center-start flex-100"
      >
        <p>
          From: 
          <span>
            Gothenburg
          </span>
        </p>
        <p>
          To: 
          <span>
            Shanghai
          </span>
        </p>
      </div>
    </div>
    <div
      className="flex layout-row layout-wrap layout-align-end-center"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-end-center charge_icons"
      >
        <ChargeIcons
          destinationFees={false}
          mot=""
          onCarriage={false}
          originFees={false}
          preCarriage={false}
          tenant={
            Object {
              "id": 123,
              "scope": Object {
                "closed_quotation_tool": true,
                "detailed_billing": true,
                "modes_of_transport": Object {
                  "air": Object {},
                  "ocean": Object {
                    "OCEAN_LOAD_TYPE": true,
                  },
                  "rail": Object {},
                  "truck": Object {},
                },
              },
              "subdomain": "foosubdomain",
              "theme": Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              },
            }
          }
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center unit_info"
      >
        <p
          className="flex-60 layout-row layout-align-start-center"
        >
          Total Weight: 
        </p>
        <span
          className="flex layout-row layout-align-start-center"
        >
          0.0 kg
        </span>
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-align-start-center"
    style={
      Object {
        "paddingBottom": "18px",
      }
    }
  />
  <CollapsingContent
    collapsed={true}
    content=""
    minHeight=""
    wrapperContentClasses=""
  >
    <QuoteCardScheduleList
      destinationHub={
        Object {
          "name": "Shanghai",
        }
      }
      onSelectSchedule={[Function]}
      originHub={
        Object {
          "name": "Gothenburg",
        }
      }
      schedules={
        Array [
          Object {
            "closing_date": "10-8-2018",
            "eta": "10-8-2018",
            "etd": "10-8-2018",
          },
        ]
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
  </CollapsingContent>
  <CollapsingContent
    collapsed={false}
    content=""
    minHeight=""
    wrapperContentClasses=""
  >
    <QuoteChargeBreakdown
      cargo={Array []}
      quote={
        Object {
          "total": Object {
            "currency": "EUR",
            "value": 100,
          },
        }
      }
      scope={
        Object {
          "closed_quotation_tool": true,
          "detailed_billing": true,
          "modes_of_transport": Object {
            "air": Object {},
            "ocean": Object {
              "OCEAN_LOAD_TYPE": true,
            },
            "rail": Object {},
            "truck": Object {},
          },
        }
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
  </CollapsingContent>
  <div
    className="flex-100 layout-wrap layout-align-start-stretch"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-stretch layout-wrap total_row"
    >
      <div
        className="flex layout-row layout-align-start-center"
      >
        <span
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          Total
        </span>
      </div>
      <div
        className="flex-75  layout-row layout-align-end-center"
      >
        <p
          style={Object {}}
        >
          100.00 EUR
        </p>
        <div
          className="flex-gt-md-25 flex-33 layout-row layout-align-end-center"
        >
          <RoundButton
            active={true}
            back={false}
            classNames="ccb_select_quote pointy layout-row layout-align-center-center add_button shorter"
            disabled={false}
            flexContainer="100"
            handleDisabled={null}
            handleNext={[Function]}
            icon=""
            iconClass=""
            inverse={false}
            size="small"
            text="Add"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-align-end-center"
      >
        <div
          className="flex-40 layout-row layout-align-start-center"
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          <div
            className="flex layout-row layout-align-start-center pointy view_switch"
            onClick={[Function]}
          >
            <p
              className="flex-none"
            >
              View Schedules
            </p>
          </div>
        </div>
        <div
          className="flex-60 layout-row layout-align-end-center layout-wrap"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`shallow rendering 1`] = `
<div
  className="
        flex-100 layout-row layout-wrap offer_result flex-lg-80 offset-lg-20
        wrapper 
      "
>
  <div
    className="flex-100 layout-row layout-align-start-center container"
  >
    <div
      className="flex-10 layout-row layout-align-center-center mot_icon"
    >
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex-55 layout-row layout-align-start-center origin_destination"
    >
      <div
        className="layout-column layout-align-center-start flex-100"
      >
        <p>
          From: 
          <span>
            Gothenburg
          </span>
        </p>
        <p>
          To: 
          <span>
            Shanghai
          </span>
        </p>
      </div>
    </div>
    <div
      className="flex layout-row layout-wrap layout-align-end-center"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-end-center charge_icons"
      >
        <ChargeIcons
          destinationFees={false}
          mot=""
          onCarriage={false}
          originFees={false}
          preCarriage={false}
          tenant={
            Object {
              "emails": Object {
                "sales": Object {
                  "air": "sales@demo.com",
                  "general": "sales@demo.com",
                  "ocean": "sales@demo.com",
                  "rail": "sales@demo.com",
                },
                "support": Object {
                  "air": "imc.air@demo.com",
                  "general": "support@demo.com",
                  "ocean": "imc.sea@demo.com",
                  "rail": "imc.rail@demo.com",
                },
              },
              "id": 123,
              "scope": Object {
                "closed_quotation_tool": true,
                "customs_export_paper": false,
                "modes_of_transport": Object {
                  "air": Object {},
                  "ocean": Object {
                    "OCEAN_LOAD_TYPE": true,
                  },
                  "rail": Object {},
                  "truck": Object {},
                },
              },
              "subdomain": "foosubdomain",
              "theme": Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              },
            }
          }
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center unit_info"
      >
        <p
          className="flex-60 layout-row layout-align-start-center"
        >
          Total Weight: 
        </p>
        <span
          className="flex layout-row layout-align-start-center"
        >
          0.0 kg
        </span>
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-align-start-center"
    style={
      Object {
        "paddingBottom": "18px",
      }
    }
  />
  <CollapsingContent
    collapsed={true}
    content=""
    minHeight=""
    wrapperContentClasses=""
  >
    <QuoteCardScheduleList
      destinationHub={
        Object {
          "name": "Shanghai",
        }
      }
      onSelectSchedule={[Function]}
      originHub={
        Object {
          "name": "Gothenburg",
        }
      }
      schedules={
        Array [
          Object {
            "closing_date": "10-8-2018",
            "eta": "10-8-2018",
            "etd": "10-8-2018",
          },
        ]
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
  </CollapsingContent>
  <CollapsingContent
    collapsed={false}
    content=""
    minHeight=""
    wrapperContentClasses=""
  >
    <QuoteChargeBreakdown
      cargo={Array []}
      quote={
        Object {
          "total": Object {
            "currency": "EUR",
            "value": 100,
          },
        }
      }
      scope={
        Object {
          "closed_quotation_tool": true,
          "customs_export_paper": false,
          "modes_of_transport": Object {
            "air": Object {},
            "ocean": Object {
              "OCEAN_LOAD_TYPE": true,
            },
            "rail": Object {},
            "truck": Object {},
          },
        }
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
  </CollapsingContent>
  <div
    className="flex-100 layout-wrap layout-align-start-stretch"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-stretch layout-wrap total_row"
    >
      <div
        className="flex layout-row layout-align-start-center"
      >
        <span
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          Total
        </span>
      </div>
      <div
        className="flex-75  layout-row layout-align-end-center"
      >
        <p
          style={Object {}}
        >
          100.00 EUR
        </p>
        <div
          className="flex-gt-md-25 flex-33 layout-row layout-align-end-center"
        >
          <RoundButton
            active={true}
            back={false}
            classNames="ccb_select_quote pointy layout-row layout-align-center-center add_button shorter"
            disabled={false}
            flexContainer="100"
            handleDisabled={null}
            handleNext={[Function]}
            icon=""
            iconClass=""
            inverse={false}
            size="small"
            text="Add"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-align-end-center"
      >
        <div
          className="flex-60 layout-row layout-align-end-center layout-wrap"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`show schedule options working 1`] = `
<div
  className="
        flex-100 layout-row layout-wrap offer_result flex-lg-80 offset-lg-20
        wrapper 
      "
>
  <div
    className="flex-100 layout-row layout-align-start-center container"
  >
    <div
      className="flex-10 layout-row layout-align-center-center mot_icon"
    >
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex-55 layout-row layout-align-start-center origin_destination"
    >
      <div
        className="layout-column layout-align-center-start flex-100"
      >
        <p>
          From: 
          <span>
            Gothenburg
          </span>
        </p>
        <p>
          To: 
          <span>
            Shanghai
          </span>
        </p>
      </div>
    </div>
    <div
      className="flex layout-row layout-wrap layout-align-end-center"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-end-center charge_icons"
      >
        <ChargeIcons
          destinationFees={false}
          mot=""
          onCarriage={false}
          originFees={false}
          preCarriage={false}
          tenant={
            Object {
              "id": 123,
              "scope": Object {
                "closed_quotation_tool": true,
                "detailed_billing": true,
                "modes_of_transport": Object {
                  "air": Object {},
                  "ocean": Object {
                    "OCEAN_LOAD_TYPE": true,
                  },
                  "rail": Object {},
                  "truck": Object {},
                },
              },
              "subdomain": "foosubdomain",
              "theme": Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              },
            }
          }
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center unit_info"
      >
        <p
          className="flex-60 layout-row layout-align-start-center"
        >
          Total Weight: 
        </p>
        <span
          className="flex layout-row layout-align-start-center"
        >
          0.0 kg
        </span>
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-align-start-center"
    style={
      Object {
        "paddingBottom": "18px",
      }
    }
  />
  <CollapsingContent
    collapsed={false}
    content=""
    minHeight=""
    wrapperContentClasses=""
  >
    <QuoteCardScheduleList
      destinationHub={
        Object {
          "name": "Shanghai",
        }
      }
      onSelectSchedule={[Function]}
      originHub={
        Object {
          "name": "Gothenburg",
        }
      }
      schedules={
        Array [
          Object {
            "closing_date": "10-8-2018",
            "eta": "10-8-2018",
            "etd": "10-8-2018",
          },
        ]
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
  </CollapsingContent>
  <CollapsingContent
    collapsed={true}
    content=""
    minHeight=""
    wrapperContentClasses=""
  >
    <QuoteChargeBreakdown
      cargo={Array []}
      quote={
        Object {
          "total": Object {
            "currency": "EUR",
            "value": 100,
          },
        }
      }
      scope={
        Object {
          "closed_quotation_tool": true,
          "detailed_billing": true,
          "modes_of_transport": Object {
            "air": Object {},
            "ocean": Object {
              "OCEAN_LOAD_TYPE": true,
            },
            "rail": Object {},
            "truck": Object {},
          },
        }
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
  </CollapsingContent>
  <div
    className="flex-100 layout-wrap layout-align-start-stretch"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-stretch layout-wrap total_row"
    >
      <div
        className="flex layout-row layout-align-start-center"
      >
        <span
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          Total
        </span>
      </div>
      <div
        className="flex-75  layout-row layout-align-end-center"
      >
        <p
          style={Object {}}
        >
          100.00 EUR
        </p>
        <div
          className="flex-gt-md-25 flex-33 layout-row layout-align-end-center"
        >
          <RoundButton
            active={true}
            back={false}
            classNames="ccb_select_quote pointy layout-row layout-align-center-center add_button shorter"
            disabled={false}
            flexContainer="100"
            handleDisabled={null}
            handleNext={[Function]}
            icon=""
            iconClass=""
            inverse={false}
            size="small"
            text="Add"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-align-end-center"
      >
        <div
          className="flex-40 layout-row layout-align-start-center"
          style={
            Object {
              "textAlign": "left",
            }
          }
        >
          <div
            className="flex layout-row layout-align-start-center pointy view_switch"
            onClick={[Function]}
          >
            <p
              className="flex-none"
            >
              View Price Breakdown
            </p>
          </div>
        </div>
        <div
          className="flex-60 layout-row layout-align-end-center layout-wrap"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`show schedules set to true 1`] = `
<div
  className="
        flex-100 layout-row layout-wrap offer_result flex-lg-80 offset-lg-20
        wrapper 
      "
>
  <div
    className="flex-100 layout-row layout-align-start-center container"
  >
    <div
      className="flex-10 layout-row layout-align-center-center mot_icon"
    >
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex-55 layout-row layout-align-start-center origin_destination"
    >
      <div
        className="layout-column layout-align-center-start flex-100"
      >
        <p>
          From: 
          <span>
            Gothenburg
          </span>
        </p>
        <p>
          To: 
          <span>
            Shanghai
          </span>
        </p>
      </div>
    </div>
    <div
      className="flex layout-row layout-wrap layout-align-end-center"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-end-center charge_icons"
      >
        <ChargeIcons
          destinationFees={false}
          mot=""
          onCarriage={false}
          originFees={false}
          preCarriage={false}
          tenant={
            Object {
              "emails": Object {
                "sales": Object {
                  "air": "sales@demo.com",
                  "general": "sales@demo.com",
                  "ocean": "sales@demo.com",
                  "rail": "sales@demo.com",
                },
                "support": Object {
                  "air": "imc.air@demo.com",
                  "general": "support@demo.com",
                  "ocean": "imc.sea@demo.com",
                  "rail": "imc.rail@demo.com",
                },
              },
              "id": 123,
              "scope": Object {
                "closed_quotation_tool": true,
                "customs_export_paper": false,
                "modes_of_transport": Object {
                  "air": Object {},
                  "ocean": Object {
                    "OCEAN_LOAD_TYPE": true,
                  },
                  "rail": Object {},
                  "truck": Object {},
                },
              },
              "subdomain": "foosubdomain",
              "theme": Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              },
            }
          }
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center unit_info"
      >
        <p
          className="flex-60 layout-row layout-align-start-center"
        >
          Total Weight: 
        </p>
        <span
          className="flex layout-row layout-align-start-center"
        >
          0.0 kg
        </span>
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-align-start-center"
    style={
      Object {
        "paddingBottom": "18px",
      }
    }
  />
  <CollapsingContent
    collapsed={false}
    content=""
    minHeight=""
    wrapperContentClasses=""
  >
    <QuoteCardScheduleList
      destinationHub={
        Object {
          "name": "Shanghai",
        }
      }
      onSelectSchedule={[Function]}
      originHub={
        Object {
          "name": "Gothenburg",
        }
      }
      schedules={
        Array [
          Object {
            "closing_date": "10-8-2018",
            "eta": "10-8-2018",
            "etd": "10-8-2018",
          },
        ]
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
  </CollapsingContent>
  <CollapsingContent
    collapsed={true}
    content=""
    minHeight=""
    wrapperContentClasses=""
  >
    <QuoteChargeBreakdown
      cargo={Array []}
      quote={
        Object {
          "total": Object {
            "currency": "EUR",
            "value": 100,
          },
        }
      }
      scope={
        Object {
          "closed_quotation_tool": true,
          "customs_export_paper": false,
          "modes_of_transport": Object {
            "air": Object {},
            "ocean": Object {
              "OCEAN_LOAD_TYPE": true,
            },
            "rail": Object {},
            "truck": Object {},
          },
        }
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
  </CollapsingContent>
  <div
    className="flex-100 layout-wrap layout-align-start-stretch"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-stretch layout-wrap total_row"
    >
      <div
        className="flex layout-row layout-align-start-center"
      >
        <span
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          Total
        </span>
      </div>
      <div
        className="flex-75  layout-row layout-align-end-center"
      >
        <p
          style={Object {}}
        >
          100.00 EUR
        </p>
        <div
          className="flex-gt-md-25 flex-33 layout-row layout-align-end-center"
        >
          <RoundButton
            active={true}
            back={false}
            classNames="ccb_select_quote pointy layout-row layout-align-center-center add_button shorter"
            disabled={false}
            flexContainer="100"
            handleDisabled={null}
            handleNext={[Function]}
            icon=""
            iconClass=""
            inverse={false}
            size="small"
            text="Add"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-align-end-center"
      >
        <div
          className="flex-60 layout-row layout-align-end-center layout-wrap"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`single result rendering removes the "add" button 1`] = `
<div
  className="
        flex-100 layout-row layout-wrap offer_result flex-lg-80 offset-lg-20
        wrapper 
      "
>
  <div
    className="flex-100 layout-row layout-align-start-center container"
  >
    <div
      className="flex-10 layout-row layout-align-center-center mot_icon"
    >
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex-55 layout-row layout-align-start-center origin_destination"
    >
      <div
        className="layout-column layout-align-center-start flex-100"
      >
        <p>
          From: 
          <span>
            Gothenburg
          </span>
        </p>
        <p>
          To: 
          <span>
            Shanghai
          </span>
        </p>
      </div>
    </div>
    <div
      className="flex layout-row layout-wrap layout-align-end-center"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-end-center charge_icons"
      >
        <ChargeIcons
          destinationFees={false}
          mot=""
          onCarriage={false}
          originFees={false}
          preCarriage={false}
          tenant={
            Object {
              "emails": Object {
                "sales": Object {
                  "air": "sales@demo.com",
                  "general": "sales@demo.com",
                  "ocean": "sales@demo.com",
                  "rail": "sales@demo.com",
                },
                "support": Object {
                  "air": "imc.air@demo.com",
                  "general": "support@demo.com",
                  "ocean": "imc.sea@demo.com",
                  "rail": "imc.rail@demo.com",
                },
              },
              "id": 123,
              "scope": Object {
                "closed_quotation_tool": true,
                "customs_export_paper": false,
                "modes_of_transport": Object {
                  "air": Object {},
                  "ocean": Object {
                    "OCEAN_LOAD_TYPE": true,
                  },
                  "rail": Object {},
                  "truck": Object {},
                },
              },
              "subdomain": "foosubdomain",
              "theme": Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              },
            }
          }
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center unit_info"
      >
        <p
          className="flex-60 layout-row layout-align-start-center"
        >
          Total Weight: 
        </p>
        <span
          className="flex layout-row layout-align-start-center"
        >
          0.0 kg
        </span>
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-align-start-center"
    style={
      Object {
        "paddingBottom": "18px",
      }
    }
  />
  <CollapsingContent
    collapsed={true}
    content=""
    minHeight=""
    wrapperContentClasses=""
  >
    <QuoteCardScheduleList
      destinationHub={
        Object {
          "name": "Shanghai",
        }
      }
      onSelectSchedule={[Function]}
      originHub={
        Object {
          "name": "Gothenburg",
        }
      }
      schedules={
        Array [
          Object {
            "closing_date": "10-8-2018",
            "eta": "10-8-2018",
            "etd": "10-8-2018",
          },
        ]
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
  </CollapsingContent>
  <CollapsingContent
    collapsed={false}
    content=""
    minHeight=""
    wrapperContentClasses=""
  >
    <QuoteChargeBreakdown
      cargo={Array []}
      quote={
        Object {
          "total": Object {
            "currency": "EUR",
            "value": 100,
          },
        }
      }
      scope={
        Object {
          "closed_quotation_tool": true,
          "customs_export_paper": false,
          "modes_of_transport": Object {
            "air": Object {},
            "ocean": Object {
              "OCEAN_LOAD_TYPE": true,
            },
            "rail": Object {},
            "truck": Object {},
          },
        }
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
  </CollapsingContent>
  <div
    className="flex-100 layout-wrap layout-align-start-stretch"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-stretch layout-wrap total_row"
    >
      <div
        className="flex layout-row layout-align-start-center"
      >
        <span
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          Total
        </span>
      </div>
      <div
        className="flex-75  layout-row layout-align-end-center"
      >
        <p
          style={Object {}}
        >
          100.00 EUR
        </p>
      </div>
      <div
        className="flex-100 layout-row layout-align-end-center"
      >
        <div
          className="flex-60 layout-row layout-align-end-center layout-wrap"
        />
      </div>
    </div>
  </div>
</div>
`;
